--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
     <main>
         <section id="login">
              <div id="imagem">
-
+                 
              </div>
              <div id="formulario">
                  <h1>Login</h1>
                  <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configuraçãoes no seu ambiente</p>
+                 <form action="login.php" method="post">
+                    <input type="text" placeholder="Nome">
+                    <input type="password" name="" id="" placeholder="Senha"> <br>
+                    <input id="entrar" type="submit" value="Entrar"> <br>
+                    <input id="button" type="button" value="Esqueci a Senha">
+                   
+                 </form>
              </div>
         </section>
     </main>
